--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -15,8 +15,13 @@
     margin-bottom: 1rem;
 }
 
+.contact__subtitle,
 .contact__description {
-    margin-bottom: 3.2rem;
+    font-size: var(--fs-text);
+}
+
+.contact__description {
+    margin-bottom: 3.2rem;    
 }
 
 input[type="text"],
