--- a/src/css/perfil.css
+++ b/src/css/perfil.css
@@ -39,39 +39,25 @@
 }
 
 .perfil__name {
-    font-size: var(--fs-small);
+    font-size: var(--fs-big);
     font-weight: bold;
-}
-
-@media (min-width: 1024px) {
-    .perfil__name {
-        font-size: var(--fs-big);
-    }
+    margin: 0 0 1.6rem 0;
 }
 
 .perfil__occupation {
-    font-size: var(--fs-xsmall);
-}
-
-@media (min-width: 768px) {
-    .perfil__occupation {
-        font-size: var(--fs-text);
-    }
-}
-
-@media (min-width: 1024px) {
-    .perfil__occupation {
-        font-size: var(--fs-small);
-    }
+    font-size: var(--fs-medium);
+    margin-bottom: 1.6rem;
 }
 
 .social-media {
+    padding: 1rem 0;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 
 .social-media__links {
+    font-size: var(--fs-text);
     display: flex;
     align-items: center;
 }
@@ -81,7 +67,7 @@
     display: inline-block;
     width: 2rem;
     margin-right: 0.5rem;
-    align-items: center;
+    /* align-items: center; */
 }
 
 .social-media__links--github::before {
