--- a/src/css/skills.css
+++ b/src/css/skills.css
@@ -43,9 +43,9 @@
 
 .skill__description {
     font-weight: bold;
+    font-size: var(--fs-text);
     text-align: center;
     color: var(--clr-accent);
-
     display: flex;
     flex-direction: column;
     justify-content: space-between;
