--- a/src/css/experience.css
+++ b/src/css/experience.css
@@ -8,6 +8,10 @@
     margin-bottom: 3.2rem;
 }
 
+.experience {
+    overflow: hidden;
+}
+
 .experience:not(:last-child) {
     margin-bottom: 1.6rem;
 }
@@ -32,7 +36,7 @@
     width: 100%;
     height: 25rem;
     object-fit: cover;
-    object-position: top center;
+    object-position: top left;
 }
 
 @media (min-width: 768px) {
